; ModuleID = '/home/carl/AnghaBench/libui/_future/unittest/extr_testing_testing.c_runDefers.c'
source_filename = "/home/carl/AnghaBench/libui/_future/unittest/extr_testing_testing.c_runDefers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.defer* }
%struct.defer = type { i32, i32 (i32)*, %struct.defer* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @runDefers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @runDefers(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.defer*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %30

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 1, i32* %11, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load %struct.defer*, %struct.defer** %13, align 8
  store %struct.defer* %14, %struct.defer** %3, align 8
  br label %15

15:                                               ; preds = %26, %9
  %16 = load %struct.defer*, %struct.defer** %3, align 8
  %17 = icmp ne %struct.defer* %16, null
  br i1 %17, label %18, label %30

18:                                               ; preds = %15
  %19 = load %struct.defer*, %struct.defer** %3, align 8
  %20 = getelementptr inbounds %struct.defer, %struct.defer* %19, i32 0, i32 1
  %21 = load i32 (i32)*, i32 (i32)** %20, align 8
  %22 = load %struct.defer*, %struct.defer** %3, align 8
  %23 = getelementptr inbounds %struct.defer, %struct.defer* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 %21(i32 %24)
  br label %26

26:                                               ; preds = %18
  %27 = load %struct.defer*, %struct.defer** %3, align 8
  %28 = getelementptr inbounds %struct.defer, %struct.defer* %27, i32 0, i32 2
  %29 = load %struct.defer*, %struct.defer** %28, align 8
  store %struct.defer* %29, %struct.defer** %3, align 8
  br label %15

30:                                               ; preds = %8, %15
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
